--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Rock Paper Scissors game</title>
   </head>
   <body>
